methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value False
= { var vuBiscuit = False
                    ^MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit() = False) {chercheur();transition()}} 
^