methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean 
= { var vuBiscuit = False
   def chercheur() {for (i <- 1 to 6 ) 
                    { if (!estSurBiscuit()) {vuBiscuit()=True}}
                   avance()}
   def transition() {recule();recule();recule();recule();recule();recule();droite();avance();gauche();}
                            
while (vuBiscuit() = False) {chercheur();transition()}}